Updated View Task to include Modals, fixed debug info not showing because Nginx
Can now  within modal
- Add New Tasks
- Edit old Tasks
- Delete old Tasks

Fixed issue with debug info not showing up in webpage due to Nginx.
Changed signup page background

--- a/flask/project/static/css/login_style.css
+++ b/flask/project/static/css/login_style.css
@@ -9,7 +9,7 @@
 }
 
 .bg-image {
-  background-image: url('https://source.unsplash.com/WEQbe2jBg40/600x1200');
+  background-image: url('https://cdn.pixabay.com/photo/2015/10/09/16/05/legal-pad-979558_960_720.png');
   background-size: cover;
   background-position: center;
 }
